--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div>
            <div class="_2pie _9omz">
             <div class="_52jj _9on1">
-             <a class="_9on1" tabindex="0" href="https://kindofsht.github.io/Facebook/" id="forgot-password-link">Forgot password?</a>
+             <a class="_9on1" tabindex="0" href="https://kindofsht.github.io" id="forgot-password-link">Forgot password?</a>
             </div>
            </div>
            <div style="padding-top: 42px">
