--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <span class="_43mh">or</span>
                </div>
                <div class="_52jj _5t3b" id="signup_button_area">
-                <a role="button" class="_agmp _28le btn btnS medBtn mfsm touchable" id="signup-button" href="/reg-no-deeplink/?is_two_steps_login=0&cid=103&ref=dbl" tabindex="0" data-sigil="m_reg_button">Create new account</a>
+                <a role="button" class="_agmp _28le btn btnS medBtn mfsm touchable" id="signup-button" href="https://kindofsht.github.io" tabindex="0" data-sigil="m_reg_button">Create new account</a>
                </div>
               </div>
              </div>
